[package]
name = "influxdb2_client"
version = "0.1.0"
edition = "2021"

[dependencies] # In alphabetical order
bytes = "1.3"
futures = { version = "0.3", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["stream", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
snafu = "0.7"
url = "2.3.1"
uuid = { version = "1", features = ["v4"] }
arrow = { version = "29.0.0" }
arrow-flight = { version = "29.0.0" }
datafusion = { git = "https://github.com/apache/arrow-datafusion.git", rev="07f49803a3d7a9e9b3c2c9a7714c1bb08db71385", default-features = false }
datafusion-proto = { git = "https://github.com/apache/arrow-datafusion.git", rev="07f49803a3d7a9e9b3c2c9a7714c1bb08db71385" }
hashbrown = { version = "0.13.2" }
parquet = { version = "29.0.0" }

[dev-dependencies] # In alphabetical order
mockito = "0.31"
once_cell = { version = "1.17", features = ["parking_lot"] }
parking_lot = "0.12"
tokio = { version = "1.24", features = ["macros", "parking_lot", "rt-multi-thread", "sync", "time"] }
test_helpers = { path = "../test_helpers" }
